<resources>
    <string name="app_name">Vigyan</string>
    <string name="continue_as_student">Continue as Student</string>
    <string name="welcome_to_vigyan">Welcome to Vigyan</string>
    <string name="choose_your_stream">Choose Your Stream</string>
    <string name="electrical_and_electronics">Electrical and Electronics</string>
    <string name="electronics_and_communication">Electronics and Communication</string>
    <string name="mechanical">Mechanical</string>
    <string name="computer_science">Computer Science</string>
    <string name="semester_1_and_2">Semester 1 and 2</string>
    <string name="semester_3">Semester 3</string>
    <string name="semester_4">Semester 4</string>
    <string name="semester_5">Semester 5</string>
    <string name="semester_6">Semester 6</string>
    <string name="semester_7">Semester 7</string>
    <string name="semester_8">Semester 8</string>
    <string name="todo">TODO</string>
    <string name="manage_notes">Manage Notes</string>
    <string name="faculty_mode">Faculty Mode</string>
    <string name="main_background">TODO</string>
    <string name="view_all_notes">View All Notes</string>
    <string name="button">Button</string>
    <string name="continue_as_teachers">Continue as Teachers</string>
    <string name="notes">Notes</string>
    <string name="lecture_videos">Lecture Videos</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="question_papers">Question Papers</string>
    <string name="vigyan">Vigyan</string>
    <string name="mechanical_engineering">Mechanical Engineering</string>
    <string name="electrical_and_electronics_engineering">Electrical and Electronics Engineering</string>
    <string name="electronics_and_communication_engineering">Electronics and Communication Engineering</string>
    <string name="computer_science_and_engineering">Computer Science and Engineering</string>
    <string name="notice_board">Notice Board</string>
    <string name="linear_algebra_and_n_calculus">Linear Algebra and \n Calculus</string>
    <string name="programming_in_c">Programming In C</string>
    <string name="basics_of_civil_and_nmechanical">Basics of Civil and\nMechanical</string>
    <string name="professional_ncommunication">Professional\nCommunication</string>
    <string name="life_skills">Life Skills</string>
    <string name="basics_of_electrical_n_and_electronics">Basics of Electrical\n and Electronics</string>
    <string name="engineering_nphysics">Engineering\nPhysics</string>
    <string name="engineering_nmechanics">Engineering\nMechanics</string>
    <string name="engineering_nchemistry">Engineering\nChemistry</string>
    <string name="engineering_ngraphics">Engineering\nGraphics</string>
    <string name="differential_nequations">Differential\nEquations</string>
    <string name="business_economics">Business Economics</string>
    <string name="electronic_devices_and_circuits">Electronic Devices and Circuits</string>
    <string name="switching_theory_and_nlogic_design">Switching Theory and\nLogic Design</string>
    <string name="discrete_computational_nstructures">Discrete Computational\nStructures</string>
    <string name="data_structures">Data Structures</string>
    <string name="linear_algebra_and_ncomplex_analysis">Linear Algebra and\nComplex Analysis</string>
    <string name="probability_distributions_ntransforms_and_numerical_methods">Probability Distributions,\nTransforms and Numerical Methods</string>
    <string name="principles_of_database_design">Principles of Database Design</string>
    <string name="object_oriented_design_nand_programming">Object Oriented Design\nand Programming</string>
    <string name="operating_systems">Operating Systems</string>
    <string name="computer_organization_nand_architecture">Computer Organization\nand Architecture</string>
    <string name="theory_of_computation">Theory of Computation</string>
    <string name="system_software">System Software</string>
    <string name="microprocessors_and_nmicrocontrollers">Microprocessors and\nMicrocontrollers</string>
    <string name="data_communication">Data Communication</string>
    <string name="graph_theory_and_combinatorics">Graph Theory and Combinatorics</string>
    <string name="elective_1">Elective 1</string>
    <string name="elective_2">Elective 2</string>
    <string name="design_and_analysis_of_nalgorithms">Design and Analysis of\nAlgorithms</string>
    <string name="compiler_design">Compiler Design</string>
    <string name="computer_networks">Computer Networks</string>
    <string name="software_engineering_and_nproject_management">Software Engineering and\nProject Management</string>
    <string name="computer_graphics">Computer Graphics</string>
    <string name="programming_paradigms">Programming Paradigms</string>
    <string name="computer_system_architecture">Computer System Architecture</string>
    <string name="cryptography_and_network_security">Cryptography and Network Security</string>
    <string name="distributed_computing">Distributed Computing</string>
    <string name="data_mining_and_warehousing">Data Mining and Warehousing</string>
    <string name="embedded_systems">Embedded Systems</string>
    <string name="mechanics_of_solids">Mechanics of Solids</string>
    <string name="mechanics_of_fluids">Mechanics of Fluids</string>
    <string name="thermodynamics">Thermodynamics</string>
    <string name="metallurgy_and_materials">Metallurgy and Materials</string>
    <string name="advanced_mechanics_of_solids">Advanced Mechanics of Solids</string>
    <string name="thermal_engineering">Thermal Engineering</string>
    <string name="fluid_machinery">Fluid Machinery</string>
    <string name="manufacturing_technology">Manufacturing Technology</string>
    <string name="mechanics_of_machinery">Mechanics of Machinery</string>
    <string name="machine_tools_and_ndigital_manufacturing">Machine Tools and\nDigital Manufacturing</string>
    <string name="computer_programming_and_nnumerical_methods">Computer Programming and\nNumerical Methods</string>
    <string name="electrical_drives_and_ncontrol_for_automation">Electrical Drives and\nControl for Automation</string>
    <string name="heat_and_mass_transfer">Heat and Mass Transfer</string>
    <string name="dynamics_of_machinery">Dynamics of Machinery</string>
    <string name="advanced_manufacturing_ntechnology">Advanced Manufacturing\nTechnology</string>
    <string name="metrology_and_instrumentation">Metrology and Instrumentation</string>
    <string name="computer_aided_design_and_analysis">Computer Aided Design and Analysis</string>
    <string name="design_of_machine_elements_i">Design of Machine Elements I</string>
    <string name="advanced_energy_engineering">Advanced Energy Engineering</string>
    <string name="refrigeration_and_air_conditioning">Refrigeration and Air Conditioning</string>
    <string name="mechatronics">Mechatronics</string>
    <string name="compressible_fluid_flow">Compressible Fluid Flow</string>
    <string name="design_of_machine_elements_ii">Design of Machine Elements II</string>
    <string name="industrial_engineering">Industrial Engineering</string>
    <string name="network_theory">Network Theory</string>
    <string name="solid_state_devices">Solid State Devices</string>
    <string name="electronic_circuits">Electronic Circuits</string>
    <string name="logic_circuit_design">Logic Circuit Design</string>
    <string name="signals_and_systems">Signals and Systems</string>
    <string name="analog_integrated_circuits">Analog Integrated Circuits</string>
    <string name="computer_organization">Computer Organization</string>
    <string name="analog_communication_engineering">Analog Communication Engineering</string>
    <string name="digital_signal_processing">Digital Signal Processing</string>
    <string name="applied_electromagnetic_theory">Applied Electromagnetic Theory</string>
    <string name="power_electronics_and_ninstrumentation">Power Electronics and\nInstrumentation</string>
    <string name="object_oriented_programming">Object Oriented Programming</string>
    <string name="digital_communication">Digital Communication</string>
    <string name="antenna_and_wave_propagation">Antenna and Wave Propagation</string>
    <string name="vlsi">VLSI</string>
    <string name="circuits_and_networks">Circuits and Networks</string>
    <string name="analog_electronics_circuits">Analog Electronics Circuits</string>
    <string name="dc_machines_and_transformers">DC Machines and Transformers</string>
    <string name="computer_programming">Computer Programming</string>
    <string name="synchronous_and_induction_nmachines">Synchronous and Induction\nMachines</string>
    <string name="digital_electronics_and_logic_design">Digital Electronics and Logic Design</string>
    <string name="material_science">Material Science</string>
    <string name="measurements_and_instrumentation">Measurements and Instrumentation</string>
    <string name="power_generation_transmission_nand_protection">Power Generation, Transmission\nand Protection</string>
    <string name="linear_control_systems">Linear Control Systems</string>
    <string name="power_electronics">Power Electronics</string>
    <string name="microprocessor_and_nembedded_systems">Microprocessor and\nEmbedded systems</string>
    <string name="electronic_communication">Electronic Communication</string>
    <string name="distributed_generation_nand_smart_grids">Distributed Generation\nand Smart Grids</string>
    <string name="electrical_machine_design">Electrical Machine Design</string>
    <string name="electrical_system_design">Electrical System Design</string>
    <string name="special_electrical_machines">Special Electrical Machines</string>
    <string name="industrial_instrumentation_nand_automation">Industrial Instrumentation\nAnd Automation</string>
    <string name="electrical_and_n_electronics">Electrical and\n Electronics</string>
    <string name="electronics_and_n_communication">Electronics and\n Communication</string>
    <string name="electromagnetics">Electromagnetics</string>
    <string name="advanced_control_theory">Advanced Control Theory</string>
    <string name="electric_drives">Electric Drives</string>
    <string name="power_system_analysis">Power System Analysis</string>
    <string name="principles_of_management">Principles of Management</string>
    <string name="information_theory_and_coding">Information Theory and Coding</string>
    <string name="microwave_and_radar_engg">Microwave and Radar Engineering</string>
    <string name="optical_communication">Optical Communication</string>
    <string name="computer_communication">Computer Communication</string>
    <string name="control_systems">Control Systems</string>
    <string name="nano_electronics">Nano Electronics</string>
    <string name="advanced_communication_systems">Advanced Communication Systems</string>
    <string name="elective">Elective</string>
    <string name="common_elective">Common Elective</string>
</resources>
